[project]
name = "anthropic-proxy"
version = "0.1.0"
description = "Proxy that translates Anthropic API to LiteLLM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "uvicorn>=0.34.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "litellm>=1.40.14",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.6",  # For form data handling
]
